--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ name = "libctru"
 version = "0.1.0"
 edition = "2018"
 
+[features]
+generate = [ "bindgen" ]
+
 [dependencies]
 
 [build-dependencies]
-bindgen = "0.58.1"
+bindgen = { version = "0.58.1", optional = true }
